--- a/backend/compose.yaml
+++ b/backend/compose.yaml
@@ -8,7 +8,8 @@
 # database or a cache. For examples, see the Awesome Compose repository:
 # https://github.com/docker/awesome-compose
 services:
-  server:
+  backend-main:
+    container_name: backend-main
     build:
       context: ./apps/main/
     ports:
