✨ Set up for carbon-footprint microservice

--- a/backend/compose.yaml
+++ b/backend/compose.yaml
@@ -40,6 +40,14 @@ services:
       context: ./apps/image-storage/
     ports:
       - 8003:8000
+  backend-micro-carbon-footprint:
+    container_name: backend-carbon-footprint
+    env_file:
+      - ./apps/carbon-footprint/.env
+    build:
+      context: ./apps/carbon-footprint/
+    ports:
+      - 8004:8000
 
 # The commented out section below is an example of how to define a PostgreSQL
 # database that your application can use. `depends_on` tells Docker Compose to
