--- a/compose.yaml
+++ b/compose.yaml
@@ -35,14 +35,22 @@ services:
       context: ./backend/apps/image-storage/
     ports:
       - 8003:8000
-  backend-micro-carbon-footprint:
-    container_name: backend-carbon-footprint
+  backend-micro-coord-place:
+    container_name: backend-coord-place
     env_file:
-      - ./backend/apps/carbon-footprint/.env
+      - ./backend/apps/coord-place/.env
     build:
-      context: ./backend/apps/carbon-footprint/
+      context: ./backend/apps/coord-place/
     ports:
       - 8004:8000
+  # backend-micro-carbon-footprint:
+  #   container_name: backend-carbon-footprint
+  #   env_file:
+  #     - ./backend/apps/carbon-footprint/.env
+  #   build:
+  #     context: ./backend/apps/carbon-footprint/
+  #   ports:
+  #     - 8005:8000
   # frontend:
   #   build:
   #     context: ./frontend/el-rastro/
