➕ Added flowbite dependency

--- a/frontend/el-rastro/package.json
+++ b/frontend/el-rastro/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "flowbite": "^2.2.0",
+    "flowbite-react": "^0.7.0",
     "leaflet": "^1.9.4",
     "next": "14.0.2",
     "next-auth": "^4.24.5",
