--- a/frontend/el-rastro/package.json
+++ b/frontend/el-rastro/package.json
@@ -12,7 +12,7 @@
     "flowbite": "^2.2.0",
     "flowbite-react": "^0.7.0",
     "leaflet": "^1.9.4",
-    "next": "14.0.2",
+    "next": "^14.0.3",
     "next-auth": "^4.24.5",
     "react": "^18",
     "react-dom": "^18",
