🔧 Configuration for environment variable urls

--- a/frontend/el-rastro/.env.sample
+++ b/frontend/el-rastro/.env.sample
@@ -2,3 +2,11 @@ GOOGLE_ID=
 GOOGLE_SECRET=
 NEXTAUTH_URL=
 NEXTAUTH_SECRET=
+
+# BACKEND_USER_SERVICE="http://backend-micro-users:8000"
+# BACKEND_BID_SERVICE="http://backend-micro-bids:8001"
+# BACKEND_PRODUCT_SERVICE="http://backend-micro-products:8002"
+# BACKEND_IMAGE_STORAGE_SERVICE="http://backend-micro-image-storage:8003"
+# BACKEND_CHAT_SERVICE="http://backend-micro-chats:8006"
+# BACKEND_RATING_SERVICE="http://backend-micro-ratings:8007"
+# BACKEND_AUTH_SERVICE="http://backend-micro-auth:8008"
