--- a/frontend/el-rastro/package.json
+++ b/frontend/el-rastro/package.json
@@ -20,6 +20,7 @@
     "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.8",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
