🔧 Added environment variables samples

--- a/frontend/el-rastro/.env.sample
+++ b/frontend/el-rastro/.env.sample
@@ -1,12 +1,20 @@
 GOOGLE_ID=
 GOOGLE_SECRET=
+NEXT_URL="http://localhost:3000"
 NEXTAUTH_URL=
 NEXTAUTH_SECRET=
 
-# BACKEND_USER_SERVICE="http://backend-micro-users:8000"
-# BACKEND_BID_SERVICE="http://backend-micro-bids:8001"
-# BACKEND_PRODUCT_SERVICE="http://backend-micro-products:8002"
-# BACKEND_IMAGE_STORAGE_SERVICE="http://backend-micro-image-storage:8003"
-# BACKEND_CHAT_SERVICE="http://backend-micro-chats:8006"
-# BACKEND_RATING_SERVICE="http://backend-micro-ratings:8007"
-# BACKEND_AUTH_SERVICE="http://backend-micro-auth:8008"
+BACKEND_SERVER_USER_SERVICE="http://backend-micro-users:8000"
+BACKEND_SERVER_BID_SERVICE="http://backend-micro-bids:8001"
+BACKEND_SERVER_PRODUCT_SERVICE="http://backend-micro-products:8002"
+BACKEND_SERVER_IMAGE_STORAGE_SERVICE="http://backend-micro-image-storage:8003"
+BACKEND_SERVER_CHAT_SERVICE="http://backend-micro-chats:8006"
+BACKEND_SERVER_RATING_SERVICE="http://backend-micro-ratings:8007"
+BACKEND_SERVER_AUTH_SERVICE="http://backend-micro-auth:8008"
+NEXT_PUBLIC_BACKEND_CLIENT_USER_SERVICE="http://localhost:8000"
+NEXT_PUBLIC_BACKEND_CLIENT_BID_SERVICE="http://localhost:8001"
+NEXT_PUBLIC_BACKEND_CLIENT_PRODUCT_SERVICE="http://localhost:8002"
+NEXT_PUBLIC_BACKEND_CLIENT_IMAGE_STORAGE_SERVICE="http://localhost:8003"
+NEXT_PUBLIC_BACKEND_CLIENT_CHAT_SERVICE="http://localhost:8006"
+NEXT_PUBLIC_BACKEND_CLIENT_RATING_SERVICE="http://localhost:8007"
+NEXT_PUBLIC_BACKEND_CLIENT_AUTH_SERVICE="http://localhost:8008"
