--- a/compose.yaml
+++ b/compose.yaml
@@ -83,10 +83,13 @@ services:
   #     context: ./backend/apps/carbon-footprint/
   #   ports:
   #     - 8005:8000
-  # frontend:
-  #   build:
-  #     context: ./frontend/el-rastro/
-  #   environment:
-  #     NODE_ENV: production
-  #   ports:
-  #     - 8080:3000
+  frontend:
+    container_name: frontend
+    build:
+      context: ./frontend/el-rastro/
+    environment:
+      NODE_ENV: production
+    env_file:
+      - ./frontend/el-rastro/.env.local
+    ports:
+      - 8080:3000
