--- a/frontend/el-rastro/.env.sample
+++ b/frontend/el-rastro/.env.sample
@@ -1,16 +1,16 @@
 GOOGLE_ID=
 GOOGLE_SECRET=
-NEXT_URL="http://localhost:3000"
+NEXT_URL="http://localhost:8080"
 NEXTAUTH_URL=
 NEXTAUTH_SECRET=
 
-BACKEND_SERVER_USER_SERVICE="http://backend-micro-users:8000"
-BACKEND_SERVER_BID_SERVICE="http://backend-micro-bids:8001"
-BACKEND_SERVER_PRODUCT_SERVICE="http://backend-micro-products:8002"
-BACKEND_SERVER_IMAGE_STORAGE_SERVICE="http://backend-micro-image-storage:8003"
-BACKEND_SERVER_CHAT_SERVICE="http://backend-micro-chats:8006"
-BACKEND_SERVER_RATING_SERVICE="http://backend-micro-ratings:8007"
-BACKEND_SERVER_AUTH_SERVICE="http://backend-micro-auth:8008"
+BACKEND_SERVER_USER_SERVICE="http://backend-users:8000"
+BACKEND_SERVER_BID_SERVICE="http://backend-bids:8000"
+BACKEND_SERVER_PRODUCT_SERVICE="http://backend-products:8000"
+BACKEND_SERVER_IMAGE_STORAGE_SERVICE="http://backend-image-storage:8000"
+BACKEND_SERVER_CHAT_SERVICE="http://backend-chats:8000"
+BACKEND_SERVER_RATING_SERVICE="http://backend-ratings:8000"
+BACKEND_SERVER_AUTH_SERVICE="http://backend-auth:8000"
 NEXT_PUBLIC_BACKEND_CLIENT_USER_SERVICE="http://localhost:8000"
 NEXT_PUBLIC_BACKEND_CLIENT_BID_SERVICE="http://localhost:8001"
 NEXT_PUBLIC_BACKEND_CLIENT_PRODUCT_SERVICE="http://localhost:8002"
