--- a/compose.yaml
+++ b/compose.yaml
@@ -75,19 +75,19 @@ services:
       context: ./backend/apps/auth/
     ports:
       - 8008:8000
-  # backend-micro-carbon-footprint:
-  #   container_name: backend-carbon-footprint
-  #   env_file:
-  #     - ./backend/apps/carbon-footprint/.env
-  #   build:
-  #     context: ./backend/apps/carbon-footprint/
-  #   ports:
-  #     - 8005:8000
-  frontend:
-    container_name: frontend
-    build:
-      context: ./frontend/el-rastro/
+  backend-micro-carbon-footprint:
+    container_name: backend-carbon-footprint
     env_file:
-      - ./frontend/el-rastro/.env.local
+      - ./backend/apps/carbon-footprint/.env
+    build:
+      context: ./backend/apps/carbon-footprint/
     ports:
-      - 8080:3000
+      - 8009:8000
+  # frontend:
+  #   container_name: frontend
+  #   build:
+  #     context: ./frontend/el-rastro/
+  #   env_file:
+  #     - ./frontend/el-rastro/.env.local
+  #   ports:
+  #     - 8080:3000
