--- a/frontend/el-rastro/package.json
+++ b/frontend/el-rastro/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@paypal/react-paypal-js": "^8.1.3",
     "flowbite": "^2.2.0",
     "flowbite-react": "^0.7.0",
     "framer-motion": "^10.16.15",
