🐛 Modified some incorrect URL

--- a/frontend/el-rastro/.env.sample
+++ b/frontend/el-rastro/.env.sample
@@ -18,3 +18,5 @@ NEXT_PUBLIC_BACKEND_CLIENT_IMAGE_STORAGE_SERVICE="http://localhost:8003"
 NEXT_PUBLIC_BACKEND_CLIENT_CHAT_SERVICE="http://localhost:8006"
 NEXT_PUBLIC_BACKEND_CLIENT_RATING_SERVICE="http://localhost:8007"
 NEXT_PUBLIC_BACKEND_CLIENT_AUTH_SERVICE="http://localhost:8008"
+NEXT_PUBLIC_PAYPAL_CLIENT_ID=
+NEXT_PUBLIC_PAYPAL_APP_SECRET=
