--- a/compose.yaml
+++ b/compose.yaml
@@ -6,25 +6,25 @@ services:
   backend-micro-users:
     container_name: backend-users
     env_file:
-      - ./backend/apps/users/.env
+      - ./backend/apps/el-rastro-basics/users/.env
     build:
-      context: ./backend/apps/users/
+      context: ./backend/apps/el-rastro-basics/users/
     ports:
       - 8000:8000
   backend-micro-bids:
     container_name: backend-bids
     env_file:
-      - ./backend/apps/bids/.env
+      - ./backend/apps/el-rastro-basics/bids/.env
     build:
-      context: ./backend/apps/bids/
+      context: ./backend/apps/el-rastro-basics/bids/
     ports:
       - 8001:8000
   backend-micro-products:
     container_name: backend-products
     env_file:
-      - ./backend/apps/products/.env
+      - ./backend/apps/el-rastro-basics/products/.env
     build:
-      context: ./backend/apps/products/
+      context: ./backend/apps/el-rastro-basics/products/
     ports:
       - 8002:8000
   backend-micro-image-storage:
