--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "backend/apps/el-rastro-basics"]
 	path = backend/apps/el-rastro-basics
 	url = https://github.com/josanri/el-rastro-basics.git
+[submodule "backend/apps/el-rastro-apis"]
+	path = backend/apps/el-rastro-apis
+	url = https://github.com/uma-ingenieria-web/el-rastro-apis.git
